--- a/Fetch App /package.json
+++ b/Fetch App /package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "method-override": "^3.0.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^8.4.3",
+    "partials": "^0.1.0"
   }
 }
