--- a/Fetch App /package.json
+++ b/Fetch App /package.json
@@ -15,6 +15,7 @@
     "method-override": "^3.0.0",
     "mongo": "^0.1.0",
     "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
     "partials": "^0.1.0"
   }
 }
